--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8110,6 +8110,37 @@ form span.error {
   filter: alpha(opacity=50);
 }
 /* ==========================================================================
+   page header
+   ========================================================================== */
+.page-header {
+  position: relative;
+  padding: 7px 14px;
+  margin: 0px 0 18px;
+  border: 1px solid #DDD;
+  background-color: #FBFBFB;
+  background-color: #fbfbfb;
+  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f5f5f5));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: linear-gradient(to bottom, #ffffff, #f5f5f5);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff5f5f5', GradientType=0);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+}
+.page-header h3 {
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-shadow: 1px 1px #fff;
+}
+#contact .page-header,
+#about .page-header {
+  margin-top: 15px;
+}
+/* ==========================================================================
    Navbar 
    ========================================================================== */
 .navbar {
@@ -8642,30 +8673,6 @@ body.about {
   display: block;
   height: 56px;
   overflow: hidden;
-}
-.page-header {
-  position: relative;
-  padding: 7px 14px;
-  margin: 15px 0 18px;
-  border: 1px solid #DDD;
-  background-color: #FBFBFB;
-  background-color: #fbfbfb;
-  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f5f5f5));
-  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: linear-gradient(to bottom, #ffffff, #f5f5f5);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff5f5f5', GradientType=0);
-  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-}
-.page-header h3 {
-  font-weight: normal;
-  margin-top: 0;
-  margin-bottom: 0;
-  text-shadow: 1px 1px #fff;
 }
 .thumbs {
   list-style: none;
