--- a/public/css/main.less
+++ b/public/css/main.less
@@ -171,6 +171,31 @@ form {
 }
 
 /* ==========================================================================
+   page header
+   ========================================================================== */
+.page-header {
+  position: relative;
+  padding: 7px 14px;
+  margin: 0px 0 18px;
+  border: 1px solid #DDD;
+  background-color: #FBFBFB;
+  #gradient > .vertical(#fff, #f5f5f5);
+  .box-shadow(0 1px 5px rgba(0, 0, 0, 0.1));
+  //margin-top: -18px;
+  h3 {
+    font-weight: normal;
+    margin-top: 0; 
+    margin-bottom: 0; 
+    text-shadow: 1px 1px #fff;
+  }
+}
+
+#contact .page-header, #about .page-header {
+  margin-top: 15px;
+}
+
+
+/* ==========================================================================
    Navbar 
    ========================================================================== */
 
@@ -695,6 +720,7 @@ body.about {
   line-height: 1.5;
 }
 
+
 /* ==========================================================================
    Misc 
    ========================================================================== */
@@ -807,22 +833,7 @@ body.about {
 }
 
 
-.page-header {
-  position: relative;
-  padding: 7px 14px;
-  margin: 15px 0 18px;
-  border: 1px solid #DDD;
-  background-color: #FBFBFB;
-  #gradient > .vertical(#fff, #f5f5f5);
-  .box-shadow(0 1px 5px rgba(0, 0, 0, 0.1));
-  //margin-top: -18px;
-  h3 {
-    font-weight: normal;
-    margin-top: 0; 
-    margin-bottom: 0; 
-    text-shadow: 1px 1px #fff;
-  }
-}
+
 
 
 .thumbs {
